--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </span>
 
     <!-- Replace this div with a main tag to wrap the 'main' content of the webpage-->
-    <div>
+    <main>
 
       <!-- Replace this div with a section tag to better describe this portion of content -->
       <section>
